--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,12 +8,16 @@ name = "katelyatv"
 # 存储类型配置
 NEXT_PUBLIC_STORAGE_TYPE = "d1"
 
+
 # 站点配置
-NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
+NEXT_PUBLIC_SITE_NAME = "JiabanTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
+USERNAME = "admin"
+NEXT_PUBLIC_ENABLE_REGISTER = "false"
+PASSWORD = "bujiaban007"
 
 # NextAuth 配置
-NEXTAUTH_URL = "https://your-domain.pages.dev"
+NEXTAUTH_URL = "https://tvb.bujiaban.tv"
 
 # 图片代理配置
 IMAGE_PROXY_ENABLED = "true"
@@ -42,7 +46,7 @@ NODE_ENV = "production"
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "katelyatv-db"
-database_id = "your-d1-database-id-here"
+database_id = "9152539c-f412-4721-9b32-f618bc43d074"
 
 [build]
 command = "pnpm pages:build"
