--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
     "wujinapi_cc": {
       "api": "https://api.wujinapi.cc/api.php/provide/vod",
       "name": "无尽资源",
-      "detail": "https://api.wujinapi.cc",	  
+      "detail": "https://api.wujinapi.cc",
       "is_adult": false
     },
     "yayazy": {
@@ -58,7 +58,7 @@
     "wolongzy_cc": {
       "api": "https://collect.wolongzy.cc/api.php/provide/vod",
       "name": "卧龙资源",
-      "detail": "https://collect.wolongzy.cc",	  
+      "detail": "https://collect.wolongzy.cc",
       "is_adult": false
     },
     "wolongzyw_com": {
@@ -76,7 +76,7 @@
     "rycjapi": {
       "api": "https://cj.rycjapi.com/api.php/provide/vod",
       "name": "如意资源",
-      "detail": "https://cj.rycjapi.com",	  
+      "detail": "https://cj.rycjapi.com",
       "is_adult": false
     },
     "xiaomaomi": {
@@ -94,19 +94,19 @@
     "wujinapi_com": {
       "api": "https://api.wujinapi.com/api.php/provide/vod",
       "name": "无尽资源",
-      "detail": "https://api.wujinapi.com",	  
+      "detail": "https://api.wujinapi.com",
       "is_adult": false
     },
     "wujinapi_me": {
       "api": "https://api.wujinapi.me/api.php/provide/vod",
       "name": "无尽资源",
-      "detail": "https://api.wujinapi.me",		  
+      "detail": "https://api.wujinapi.me",
       "is_adult": false
     },
     "wujinapi_net": {
       "api": "https://api.wujinapi.net/api.php/provide/vod",
       "name": "无尽资源",
-      "detail": "https://api.wujinapi.net",	  
+      "detail": "https://api.wujinapi.net",
       "is_adult": false
     },
     "wwzy": {
@@ -124,7 +124,7 @@
     "bfzyapi": {
       "api": "https://bfzyapi.com/api.php/provide/vod",
       "name": "暴风资源",
-      "detail": "https://bfzyapi.com",	  
+      "detail": "https://bfzyapi.com",
       "is_adult": false
     },
     "zuidazy": {
@@ -142,13 +142,13 @@
     "apiyhzy": {
       "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
       "name": "樱花资源",
-      "detail": "https://m3u8.apiyhzy.com",	  
+      "detail": "https://m3u8.apiyhzy.com",
       "is_adult": false
     },
     "yparse": {
       "api": "https://api.yparse.com/api/json",
       "name": "步步高资源",
-      "detail": "https://api.yparse.com",	  
+      "detail": "https://api.yparse.com",
       "is_adult": false
     },
     "niuniuzy": {
@@ -172,7 +172,7 @@
     "suoniapi": {
       "api": "https://suoniapi.com/api.php/provide/vod",
       "name": "索尼资源",
-      "detail": "https://suoniapi.com",	  
+      "detail": "https://suoniapi.com",
       "is_adult": false
     },
     "hongniuzy2": {
@@ -214,13 +214,13 @@
     "subocaiji": {
       "api": "https://subocaiji.com/api.php/provide/vod",
       "name": "速博资源",
-      "detail": "https://subocaiji.com",	  
+      "detail": "https://subocaiji.com",
       "is_adult": false
     },
     "lziapi": {
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "量子资源",
-      "detail": "https://cj.lziapi.com",	  
+      "detail": "https://cj.lziapi.com",
       "is_adult": false
     },
     "jinyingzy": {
@@ -292,37 +292,37 @@
     "aiduanju": {
       "api": "https://www.aiduanju.cc/",
       "name": "爱短剧.cc",
-      "detail": "https://www.aiduanju.cc",	  
+      "detail": "https://www.aiduanju.cc",
       "is_adult": false
     },
     "hongniuzy3": {
       "api": "https://www.hongniuzy3.com/api.php/provide/vod",
       "name": "红牛资源",
-      "detail": "https://www.hongniuzy3.com",		  
+      "detail": "https://www.hongniuzy3.com",
       "is_adult": false
     },
     "xsd_sdzyapi": {
       "api": "https://xsd.sdzyapi.com/api.php/provide/vod",
       "name": "闪电资源",
-      "detail": "https://xsd.sdzyapi.com",	  
+      "detail": "https://xsd.sdzyapi.com",
       "is_adult": false
     },
     "jyzyapi_provide": {
       "api": "https://jyzyapi.com/provide/vod",
       "name": "金鹰资源",
-      "detail": "https://jyzyapi.com",	  
+      "detail": "https://jyzyapi.com",
       "is_adult": false
     },
     "yzzy_api": {
       "api": "https://api.yzzy-api.com/inc/apijson.php",
       "name": "优质资源",
-      "detail": "https://api.yzzy-api.com",	  
+      "detail": "https://api.yzzy-api.com",
       "is_adult": false
     },
     "iqiyizyapi": {
       "api": "https://iqiyizyapi.com/api.php/provide/vod",
       "name": "iqiyi资源",
-      "detail": "https://iqiyizyapi.com",	  
+      "detail": "https://iqiyizyapi.com",
       "is_adult": false
     },
     "ffzy": {
@@ -337,239 +337,233 @@
       "detail": "https://api.maoyanapi.top",
       "is_adult": false
     },
-    "maoyanapi": {
-      "api": "https://api.maoyanapi.top/api.php/provide/vod/at/json",
-      "name": "猫眼资源",
-      "detail": "https://api.maoyanapi.top",
-      "is_adult": false
-    },		
-    "adult_site": {
+    "douapi": {
       "api": "https://api.douapi.cc/api.php/provide/vod",
       "name": "豆豆资源",
       "detail": "https://api.douapi.cc",
       "is_adult": true
     },
-    "adult_site": {
+    "semaozy": {
       "api": "https://caiji.semaozy.net/inc/api.php",
       "name": "色猫资源",
       "detail": "https://caiji.semaozy.net",
       "is_adult": true
     },
-    "adult_site": {
+    "zuiseapi": {
       "api": "https://api.zuiseapi.com/api.php/provide/vod",
       "name": "最色资源",
       "detail": "https://api.zuiseapi.com",
       "is_adult": true
     },
-    "adult_site": {
+    "ddapi": {
       "api": "https://api.ddapi.cc/api.php/provide/vod",
       "name": "滴滴资源",
       "detail": "https://api.ddapi.cc",
       "is_adult": true
-    },	
-    "adult_site": {
+    },
+    "xxibaozyw": {
       "api": "https://www.xxibaozyw.com/api.php/provide/vod",
       "name": "细胞资源",
-      "detail": "https://www.xxibaozyw.com",	  
+      "detail": "https://www.xxibaozyw.com",
       "is_adult": true
     },
-    "adult_site": {
+    "91jpzyw": {
       "api": "https://91jpzyw.com/api.php/provide/vod/at/json",
       "name": "91资源",
       "detail": "https://91jpzyw.com",
       "is_adult": true
     },
-    "adult_site": {
+    "yyzywcj": {
       "api": "https://www.yyzywcj.com/api.php/provide/vod",
       "name": "优优资源",
       "detail": "https://www.yyzywcj.com",
       "is_adult": true
     },
-    "adult_site": {
+    "siwazyw": {
       "api": "https://siwazyw.tv/api.php/provide/vod/at/json/",
       "name": "丝袜资源",
       "detail": "https://siwazyw.tv",
       "is_adult": true
     },
-    "adult_site": {
+    "apidanaizi": {
       "api": "https://apidanaizi.com/api.php/provide/vod",
       "name": "大奶资源",
       "detail": "https://apidanaizi.com",
       "is_adult": true
     },
-    "adult_site": {
+    "apilj": {
       "api": "https://apilj.com/api.php/provide/vod/at/json/",
       "name": "辣椒资源",
-      "detail": "https://apilj.com",	  
+      "detail": "https://apilj.com",
       "is_adult": true
-    },	
-    "adult_site": {
+    },
+    "dadiapi": {
       "api": "https://dadiapi.com/api.php/provide/vod",
       "name": "大地资源",
-      "detail": "https://dadiapi.com",	  
+      "detail": "https://dadiapi.com",
       "is_adult": true
     },
-    "adult_site": {
+    "hsckzy888": {
       "api": "https://hsckzy888.com/api.php/provide/vod",
       "name": "黄色资源",
-      "detail": "https://hsckzy888.com",	  
+      "detail": "https://hsckzy888.com",
       "is_adult": true
     },
-    "adult_site": {
+    "xiaojizy": {
       "api": "https://api.xiaojizy.live/provide/vod",
       "name": "小鸡资源",
-      "detail": "https://api.xiaojizy.live",	  
+      "detail": "https://api.xiaojizy.live",
       "is_adult": true
     },
-    "adult_site": {
+    "xingba111": {
       "api": "https://xingba111.com/api.php/provide/vod",
       "name": "性吧资源",
-      "detail": "https://xingba111.com",	  
+      "detail": "https://xingba111.com",
       "is_adult": true
-    },	
-    "adult_site": {
+    },
+    "apilj": {
       "api": "https://apilj.com/api.php/provide/vod",
       "name": "辣椒资源",
       "detail": "https://apilj.com",
       "is_adult": true
-    },	
-    "adult_site": {
+    },
+    "155api": {
       "api": "https://155api.com/api.php/provide/vod",
       "name": "155资源",
-      "detail": "https://155api.com",	  
+      "detail": "https://155api.com",
       "is_adult": true
     },
-    "adult_site": {
+    "ckzy": {
       "api": "https://ckzy.me/api.php/provide/vod",
       "name": "CK资源",
       "detail": "https://ckzy.me",
       "is_adult": true
     },
-    "adult_site": {
+    "bwzyz": {
       "api": "https://api.bwzyz.com/api.php/provide/vod",
       "name": "百万资源",
       "detail": "https://api.bwzyz.com",
       "is_adult": true
     },
-    "adult_site": {
+    "91md": {
       "api": "https://91md.me/api.php/provide/vod",
       "name": "91麻豆",
       "detail": "https://91md.me",
       "is_adult": true
     },
-    "adult_site": {
+    "lbapiby": {
       "api": "http://lbapiby.com/api.php/provide/vod",
       "name": "AIvin",
-      "detail": "http://lbapiby.com",	  
+      "detail": "http://lbapiby.com",
       "is_adult": true
     },
-    "adult_site": {
+    "jkunzyapi": {
       "api": "https://jkunzyapi.com/api.php/provide/vod",
       "name": "JKUN资源",
       "detail": "https://jkunzyapi.com",
       "is_adult": true
     },
-    "adult_site": {
+    "souavzy": {
       "api": "https://api.souavzy.vip/api.php/provide/vod",
       "name": "souav资源",
       "detail": "https://api.souavzy.vip",
       "is_adult": true
     },
-    "adult_site": {
+    "lbapi9": {
       "api": "https://lbapi9.com/api.php/provide/vod",
       "name": "乐播资源",
-      "detail": "https://lbapi9.com",	  
+      "detail": "https://lbapi9.com",
       "is_adult": true
     },
-    "adult_site": {
+    "aosikazy": {
       "api": "https://aosikazy.com/api.php/provide/vod",
       "name": "奥斯卡资源",
       "detail": "https://aosikazy.com",
       "is_adult": true
     },
-    "adult_site": {
+    "Naixxzy": {
       "api": "https://Naixxzy.com/api.php/provide/vod",
       "name": "奶香香",
       "detail": "https://Naixxzy.com",
       "is_adult": true
     },
-    "adult_site": {
+    "slapibf": {
       "api": "http://slapibf.com/api.php/provide/vod",
       "name": "森林资源",
       "detail": "http://slapibf.com",
       "is_adult": true
     },
-    "adult_site": {
+    "apiyutu": {
       "api": "https://apiyutu.com/api.php/provide/vod",
       "name": "玉兔资源",
       "detail": "https://apiyutu.com",
       "is_adult": true
     },
-    "adult_site": {
+    "fhapi9": {
       "api": "http://fhapi9.com/api.php/provide/vod",
       "name": "番号资源",
-      "detail": "http://fhapi9.com",	  
+      "detail": "http://fhapi9.com",
       "is_adult": true
     },
-    "adult_site": {
+    "jingpinx": {
       "api": "https://www.jingpinx.com/api.php/provide/vod",
       "name": "精品资源",
       "detail": "https://www.jingpinx.com",
       "is_adult": true
     },
-    "adult_site": {
+    "thzy1": {
       "api": "https://thzy1.me/api.php/provide/vod",
       "name": "桃花资源",
       "detail": "https://thzy1.me",
       "is_adult": true
     },
-    "adult_site": {
+    "avre06": {
       "api": "https://www.avre06.com/api.php/provide/vod",
       "name": "黄瓜资源",
       "detail": "https://www.avre06.com",
       "is_adult": true
     },
-    "adult_site": {
+    "msnii": {
       "api": "https://www.msnii.com/api/json.php",
       "name": "美少女资源",
       "detail": "https://www.msnii.com",
       "is_adult": true
     },
-    "adult_site": {
+    "xrbsp": {
       "api": "https://www.xrbsp.com/api/json.php",
       "name": "淫水机资源",
       "detail": "https://www.xrbsp.com",
       "is_adult": true
     },
-    "adult_site": {
+    "gdlsp": {
       "api": "https://www.gdlsp.com/api/json.php",
       "name": "香奶儿资源",
       "detail": "https://www.gdlsp.com",
       "is_adult": true
     },
-    "adult_site": {
+    "kxgav": {
       "api": "https://www.kxgav.com/api/json.php",
       "name": "白嫖资源",
       "detail": "https://www.kxgav.com",
       "is_adult": true
     },
-    "adult_site": {
+    "pgxdy": {
       "api": "https://www.pgxdy.com/api/json.php",
       "name": "黄AV资源",
       "detail": "https://www.pgxdy.com",
       "is_adult": true
     },
-    "adult_site": {
+    "apilsbzy1": {
       "api": "https://apilsbzy1.com/api.php/provide/vod",
       "name": "老色逼资源",
       "detail": "https://apilsbzy1.com",
       "is_adult": true
-    },   
-    "adult_site": {
+    },
+    "afasu": {
       "api": "http://www.afasu.com/api/json.php",
       "name": "小湿妹资源",
       "detail": "http://www.afasu.com",
       "is_adult": true
-    }	
+    }
   }
 }
